--- a/styles2.css
+++ b/styles2.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   height: 200px;
-  border: 1px solid black;
+  border: 5px solid rgb(255, 255, 255);
 }
 
 /*
