--- a/styles2.css
+++ b/styles2.css
@@ -5,6 +5,14 @@
   height: 200px;
   border: 5px solid rgb(255, 255, 255);
 }
+.theme {
+  justify-content: center;
+  margin: auto;
+  height: 200px;
+  width: 700px;
+  background-color: black;
+  font-family: "Courier New", Courier, monospace;
+}
 
 /*
 
